# packwiz-installer-rust

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml  static.yml
src/: cli.rs  lib.rs
src/destination/: mod.rs  overwrite.rs  paths.rs  side.rs  validity.rs
src/hash/: formats.rs  mod.rs  murmur2.rs
src/metadata/: index.rs  manifest.rs  mod.rs  modfile.rs  pack.rs
src/request/: client.rs  errors.rs  mod.rs
src/task/: cache.rs  download.rs  mod.rs  update.rs
testdata/: index.toml  pack.toml
testdata/mods/: ae2.pw.toml  balm.pw.toml  chicken-chunks.pw.toml  enderio.pw.toml  geckolib.pw.toml  mekanism-generators.pw.toml  mekanism.pw.toml  occultism.pw.toml  refined-storage.pw.toml  smartbrainlib.pw.toml  toms-storage.pw.toml  waystones.pw.toml  yungs-better-mineshafts.pw.toml
