[package]
name = "packwiz-installer"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Rust port of packwiz-installer (CLI only)"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "fs"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "stream", "rustls-tls"] }
url = "2.5"
bytes = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
indicatif = "0.17"
sha1 = "0.10"
sha2 = "0.10"
md5 = "0.7"
base64 = "0.22"
futures = "0.3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
